--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header-component></header-component>
-    <div class="container mt-3">
+    <div class="container mt-2">
         <div class="row">
             <div class="col-sm-2">
                 <a target="_blank" href="images/MyWebPic.JPG">
@@ -55,27 +55,23 @@
             <img src="images/testimonial_logo_clear.png"
                  alt="Cinque Terre" class="nohover">
         </div>
-        <article>
-            <p class="reviewer">
-                <span class="reviewer">Julie B... </span>"I wanted to create a demo
-                to upload it one of those cloud composer services so my friends and family can hear me sing.
-                I had no idea whet the music should sound like other than what was in my head. IKP recorded
-                my vocals on a track and when I returned, they produced a beat that matched perfectly.
-                They even overdubbed my vocals and created harmony backing tracks with my own voice.
-                They tuned everything so that I sounded perfect. It was AMAZING and
-                my freinds say I should submit the track to a record compnay. WOW!..."
-            </p>
-        </article>
-        <article>
-            <p class="reviewer">
-                <span class="reviewer">Young Amazin'... </span>"I'm a rapper from Boogie Down Bronx
-                and heard about the project studio through a friend. I needed some beats that no one
-                has ever heard of like those free commercial beats they sell online that everyone
-                uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks.
-                I've been giging with own music ever since and come back when I have new ideas to lay
-                down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED!..."
-            </p>
-        </article>
+        <p class="reviewer">
+            <span class="reviewer">Julie B... </span>"I wanted to create a demo
+            to upload it one of those cloud composer services so my friends and family can hear me sing.
+            I had no idea whet the music should sound like other than what was in my head. IKP recorded
+            my vocals on a track and when I returned, they produced a beat that matched perfectly.
+            They even overdubbed my vocals and created harmony backing tracks with my own voice.
+            They tuned everything so that I sounded perfect. It was AMAZING and
+            my freinds say I should submit the track to a record company. WOW!..."
+        </p>
+        <p class="reviewer">
+            <span class="reviewer">Young Amazin'... </span>"I'm a rapper from Boogie Down Bronx
+            and heard about the project studio through a friend. I needed some beats that no one
+            has ever heard of like those free commercial beats they sell online that everyone
+            uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks.
+            I've been giging with own music ever since and come back when I have new ideas to lay
+            down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED!..."
+        </p>
     </div>
 </body>
 </html>﻿
