--- a/studio.html
+++ b/studio.html
@@ -35,6 +35,7 @@
     .column {
         float: left;
         width: 15%;
+        margin-left: 50px;
     }
 
     /* The Modal (background) */
@@ -130,6 +131,7 @@
 
     img {
         margin-bottom: -4px;
+        border: none;
     }
 
     .caption-container {
