Added equipment tab

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     some great hardware equipment, we hope to be a competitive force in the project studio recording business.
                 <h2>It's Complete</h2>
                 <p class="year">2016</p>
-                <img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre" 
-                        style="width:204px; height:136px; 
-                            float:left;margin-right:15px;">
+                    <img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre"
+                         style="width:204px; height:136px;
+                            float:left;margin-right:15px">
                     <b>YEAH BABY!</b>   I finally put up the acoustic room treatment and what a difference. The sound is fantastic.
                     I have never heard my music sound so good. The frequency response is flat at the low, mid and high
                     end of the frequency spectrum. The true test will come when I bounce some tracks down to CD and play
