Music player and removed reference and use local equip pics

--- a/equipment.html
+++ b/equipment.html
@@ -122,19 +122,19 @@
         <h3 style="text-align:center">Partial List of Equipment</h3>
         <h6 style="text-align:center"><em>(click to enlarge)</em></h6>
 
-        <img id="myImg1" src="http://www.samsontech.com/site_media/cms/images/product/uncategorized-brand/uncategorized_group/uncategorized/resolv-50a/SARES50Alegacy_image_4.jpg"
+        <img id="myImg1" src="images/equipment/Sanson 50a.jpg"
              alt="Sanson 50a" style="width:17%;max-width:300px">
-        <img id="myImg2" src="https://www.yamaha-keyboard-guide.com/images/xyamaha-motif-es8.jpg.pagespeed.ic.BPDI_EJAC1.jpg"
+        <img id="myImg2" src="images/equipment/Motif ES8.jpg"
              alt="Motif ES8" style="width:17%;max-width:300px">
-        <img id="myImg3" src="https://static.roland.com/assets/images/products/main/vs_2000cd_top_main.jpg"
+        <img id="myImg3" src="images/equipment/VS-2000CD.jpg"
              alt="VS-2000CD" style="width:17%;max-width:300px">
-        <img id="myImg4" src="https://static.roland.com/assets/images/products/main/varios_front_main.jpg"
+        <img id="myImg4" src="images/equipment/Varios.jpg"
              alt="Varios" style="width:17%;max-width:300px">
-        <img id="myImg5" src="https://m.media-amazon.com/images/I/71fr5C1RECL._AC_SL1000_.jpg"
+        <img id="myImg5" src="images/equipment/Kore 2.jpg"
              alt="Kore 2" style="width:17%;max-width:300px">
-        <img id="myImg6" src="https://mackie.com/img/pic_product/mcu-pro_group_front_0_0.jpg"
+        <img id="myImg6" src="images/equipment/MCU Pro.jpg"
              alt="MCU Pro" style="width:17%;max-width:300px">
-        <img id="myImg7" src="https://www.dynaudio.com/media/9484/dynaudio-bm15a-halfprofile.png?mode=max&width=0&height=760&format=jpg&bgcolor=25282c"
+        <img id="myImg7" src="images/equipment/BM 15A.jpeg"
              alt="BM 15A" style="width:17%;max-width:300px">
 
 
