--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 <div class="fakeimg">At the very begining</div>
                 <p>Somerset, NJ, United States</p>
                 <p>Producer, Musician, Songwriter, Beat Maker, and Recording Engineer</p>
-                <h3 class="mt-4">Music References</h3>
-                <p>DAW Software, Musical Instruments and Tutorials</p>
+                <!--<h3 class="mt-4">Music References</h3>-->
+                <!--<p>DAW Software, Musical Instruments and Tutorials</p>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.ableton.com/" target="_blank">Ableton Live</a>
@@ -113,10 +113,65 @@
                         <a class="nav-link"
                            href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments" target="_blank">Master Class</a>
                     </li>
-                </ul>
+                </ul>-->
                 <!--<hr class="d-sm-none">-->
-                <h3 class="mt-4">My Songs Sample</h3>
-                <ul class="nav nav-pills flex-column">
+                <h3 class="mt-4">Songs</h3>
+                <span><b>G-Ride (feat. Christina R.)</b></span>
+                <audio controls preload="none">
+                    <source src="music/G Ride2.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>My Fantasy Boy (feat. Janira R.)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Janira3.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Oh Well (short)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Oh Well2.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>What I'm Lookin' For (feat. Young Amazin)</b></span>
+                <audio controls preload="none">
+                    <source src="music/What Im Looking For.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Wasting My Time (feat. Allen)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Wasting My Time1.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Soon (feat. Texas)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Soon.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Can't Breath (feat. Gabrielle, Trinity L.)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Gabrielle.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Shocking</b></span>
+                <audio controls preload="none">
+                    <source src="music/Shocking.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Just F*ckin Around</b></span>
+                <audio controls preload="none">
+                    <source src="music/You So Fine.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+
+                <!--<ul class="nav nav-pills flex-column">
                     <li class="nav-item">
                         <a class="nav-link"
                            href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Oh Well</a>
@@ -151,9 +206,9 @@
                             Me Just F*#king Around
                         </a>
                     </li>
-                </ul>
+                </ul>-->
                 <!--<hr class="d-sm-none">-->
-                <h3 class="mt-4">My Video Tutorials</h3>
+                <h3 class="mt-4">Video Tutorials</h3>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
                         <a class="nav-link" href="abelton_routing.html" target="_blank">
