--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
                     Your browser does not support the audio element.
                 </audio>
                 <br />
+               <span><b>Wasting My Time (feat. Allen)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Wasting My Time1.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Soon (feat. Texas)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Soon.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
                 <span><b>Oh Well (short)</b></span>
                 <audio controls preload="none">
                     <source src="music/Oh Well2.mp3" type="audio/mpeg">
@@ -140,19 +152,13 @@
                     Your browser does not support the audio element.
                 </audio>
                 <br />
-                <span><b>Wasting My Time (feat. Allen)</b></span>
+                <span><b>No More (feat. Young Amazin)</b></span>
                 <audio controls preload="none">
-                    <source src="music/Wasting My Time1.wav" type="audio/mpeg">
+                    <source src="music/No More Dutch.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>Soon (feat. Texas)</b></span>
-                <audio controls preload="none">
-                    <source src="music/Soon.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-                <br />
-                <span><b>Can't Breath (feat. Gabrielle, Trinity L.)</b></span>
+                <br />                
+                 <span><b>Can't Breath (feat. Gabrielle, Trinity L.)</b></span>
                 <audio controls preload="none">
                     <source src="music/Gabrielle.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
