--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
                 <p>Producer, Musician, Songwriter, Beat Maker, and Recording Engineer</p>
                 <!--<h3 class="mt-4">Music References</h3>-->
                 <!--<p>DAW Software, Musical Instruments and Tutorials</p>
-                <ul class="nav nav-pills flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.ableton.com/" target="_blank">Ableton Live</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.avid.com/pro-tools" target="_blank">Avid Technology</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.reasonstudios.com/" target="_blank">Reason Studios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments" target="_blank">Master Class</a>
-                    </li>
-                </ul>-->
+    <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+            <a class="nav-link" href="https://www.ableton.com/" target="_blank">Ableton Live</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="https://www.avid.com/pro-tools" target="_blank">Avid Technology</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="https://www.reasonstudios.com/" target="_blank">Reason Studios</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
+               href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments" target="_blank">Master Class</a>
+        </li>
+    </ul>-->
                 <!--<hr class="d-sm-none">-->
                 <h3 class="mt-4">Songs</h3>
                 <span><b>G-Ride (feat. Christina R.)</b></span>
@@ -125,6 +125,18 @@
                 <span><b>My Fantasy Boy (feat. Janira R.)</b></span>
                 <audio controls preload="none">
                     <source src="music/Janira3.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Wasting My Time (feat. Allen)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Wasting My Time1.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br />
+                <span><b>Soon (feat. Texas)</b></span>
+                <audio controls preload="none">
+                    <source src="music/Soon.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br />
@@ -140,15 +152,9 @@
                     Your browser does not support the audio element.
                 </audio>
                 <br />
-                <span><b>Wasting My Time (feat. Allen)</b></span>
+                <span><b>No More' For (feat. Young Amazin)</b></span>
                 <audio controls preload="none">
-                    <source src="music/Wasting My Time1.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-                <br />
-                <span><b>Soon (feat. Texas)</b></span>
-                <audio controls preload="none">
-                    <source src="music/Soon.wav" type="audio/mpeg">
+                    <source src="music/No More Dutch.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br />
@@ -172,41 +178,41 @@
                 <br />
 
                 <!--<ul class="nav nav-pills flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Oh Well</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="https://soundcloud.com/tlennon/g-ride2/s-aZzVr?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                            G-Ride (Feat. Christina R.)
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="https://soundcloud.com/tlennon/my-fantasy-boy/s-BIekf?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                            My Fantasy Boy (Feat. Janira R.)
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="https://soundcloud.com/tlennon/what-im-looking-for/s-31f78?in=tlennon/sets/young-amazin/s-Dc6R3&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                            What I'm Looking For (Feat. Young Amazin)
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="https://soundcloud.com/tlennon/no-more-dutch/s-cBGw6?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                            No More Dutch (Feat. Young Amazin)
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="https://soundcloud.com/tlennon/you-so-fine/s-TmtCi?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                            Me Just F*#king Around
-                        </a>
-                    </li>
-                </ul>-->
+        <li class="nav-item">
+            <a class="nav-link"
+               href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Oh Well</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
+               href="https://soundcloud.com/tlennon/g-ride2/s-aZzVr?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
+                G-Ride (Feat. Christina R.)
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
+               href="https://soundcloud.com/tlennon/my-fantasy-boy/s-BIekf?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
+                My Fantasy Boy (Feat. Janira R.)
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
+               href="https://soundcloud.com/tlennon/what-im-looking-for/s-31f78?in=tlennon/sets/young-amazin/s-Dc6R3&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
+                What I'm Looking For (Feat. Young Amazin)
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
+               href="https://soundcloud.com/tlennon/no-more-dutch/s-cBGw6?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
+                No More Dutch (Feat. Young Amazin)
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link"
+               href="https://soundcloud.com/tlennon/you-so-fine/s-TmtCi?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
+                Me Just F*#king Around
+            </a>
+        </li>
+    </ul>-->
                 <!--<hr class="d-sm-none">-->
                 <h3 class="mt-4">Video Tutorials</h3>
                 <ul class="nav nav-pills flex-column">
