--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
         <p class="reviewer">
             <span class="reviewer">Julie B... </span>"I wanted to create a demo
             to upload it one of those cloud composer services so my friends and family can hear me sing.
-            I had no idea whet the music should sound like other than what was in my head. IKP recorded
+            I had no idea what the music should sound like other than what was in my head. IKP recorded
             my vocals on a track and when I returned, they produced a beat that matched perfectly.
             They even overdubbed my vocals and created harmony backing tracks with my own voice.
             They tuned everything so that I sounded perfect. It was AMAZING and
@@ -69,8 +69,8 @@
             and heard about the project studio through a friend. I needed some beats that no one
             has ever heard of like those free commercial beats they sell online that everyone
             uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks.
-            I've been giging with own music ever since and come back when I have new ideas to lay
-            down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED!..."
+            I've been giging with my own music ever since and come back when I have new ideas to lay
+            down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED DONE!..."
         </p>
     </div>
 </body>
