More spelling changes index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="images/Studio_Close.JPG" class="img-thumbnail"
                          alt="Cinque Terre" style="width:204px; height:136px;
                             float:left; margin-right:15px;">
-                    <b>THERE WASN'T' MUCH YET!</b> Howver, it dawned on me that I had always wanted to get back into the music
+                    <b>THERE WASN'T' MUCH YET!</b> However, it dawned on me that I had always wanted to get back into the music
                     and the recording industry and the timing was perfect as I had fewer financial responsibilities.
                     I finally got up enough nerve and money to purchase my first synthesizer workstation.
                     I waited until I got a check from the government in the form of a tax return and headed out to Sam Ash
@@ -46,7 +46,7 @@
                     <a href="https://www.reasonstudios.com/en/reason" target="_blank">Propellerhead Reason</a>, and
                     <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>. I also selected
                     <a href="https://www.native-instruments.com/en/" target="_blank">Native Instrument</a>
-                    Kore (no longer avaiable), Kontakt, and Komplete as my main VSTIs because they comes
+                    Kore (no longer available), Kontakt, and Komplete as my main VSTIs because they comes
                     with an abundance of soft instruments and samplers.
                 </p>
                 <p>
