--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             my vocals on a track and when I returned, they produced a beat that matched perfectly.
             They even overdubbed my vocals and created harmony backing tracks with my own voice.
             They tuned everything so that I sounded perfect. It was AMAZING and
-            my freinds say I should submit the track to a record company. WOW!..."
+            my friends say I should submit the track to a record company. WOW!..."
         </p>
         <p class="reviewer">
             <span class="reviewer">Young Amazin'... </span>"I'm a rapper from Boogie Down Bronx
