--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     music store and bought a
                     <a href="https://www.yamaha-keyboard-guide.com/yamaha-motif-es8.html" target="_blank">Yamaha Motif ES8</a>,
                     a dynamic microphone, and a pair of
-                    <a href="http://www.samsontech.com/samson/products/studio-monitors/resolv/resolv50a/" target="_blank">Sanson 50a</a>
+                    <a href="http://www.samsontech.com/samson/products/studio-monitors/resolv/resolv50a/" target="_blank">Samson 50a</a>
                     active monitors with subwoofer.
                     Enough power and capabilities to start recording some pretty decent beats.
                 </p>
