--- a/index.html
+++ b/index.html
@@ -129,12 +129,16 @@
                 </audio>
                 <br />
                 <span><b>Wasting My Time (feat. Allen)</b></span>
+                <a href="lyrics/Wasting My Time.pdf" target="_blank">Lyrics</a>
                 <audio controls preload="none">
                     <source src="music/Wasting My Time1.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br />
-                <span><b>Soon (feat. Texas)</b></span>
+                <span>
+                    <b>Soon (feat. Texas)</b>
+                    <a href="lyrics/Soon.pdf" target="_blank">Lyrics</a>
+                </span>
                 <audio controls preload="none">
                     <source src="music/Soon.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
