Added more lyrics

--- a/index.html
+++ b/index.html
@@ -117,12 +117,14 @@
                 <!--<hr class="d-sm-none">-->
                 <h3 class="mt-4">Songs</h3>
                 <span><b>G-Ride (feat. Christina R.)</b></span>
+                <a href="lyrics/G-Ride.pdf" target="_blank">Lyrics</a>
                 <audio controls preload="none">
                     <source src="music/G Ride2.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br />
                 <span><b>My Fantasy Boy (feat. Janira R.)</b></span>
+                <a href="lyrics/My Fantasy Boy.pdf" target="_blank">Lyrics</a>
                 <audio controls preload="none">
                     <source src="music/Janira3.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
