--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
     <script src="components/footer.js" type="text/javascript" defer></script>
     <style>
         #logo1 {
-            width: 450px; /* screen width */
+            width: 540px; /* screen width */
             height: 170px; /* screen height */
-            background-image: url("images/music_staff_transparent.png");
+            background-image: url("images/wave.png");
             background-repeat: no-repeat;
-            background-size: 375px;
+            background-size: 100%;
         }
     </style>
 </head>
@@ -29,7 +29,7 @@
                          alt="Forest" class="grow">
                 </a>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <p class="contact">
                     <strong>Terrence Lennon</strong>
                 </p>
