--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <img src="images/Studio_Old.JPG"
                          alt="Forest" class="grow">
                 </a>
+                <span style="font-size:12px">(click to enlarge)</span>
                 <div class="fakeimg">At the very begining</div>
                 <p>Somerset, NJ, United States</p>
                 <p>Producer, Musician, Songwriter, Beat Maker, and Recording Engineer</p>
